--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "* В дальнейшем в проект будет добавлена возможность ставить и подсчитывать like и связываться с сервером",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf dist && webpack --mode production",
+    "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/KirillTsurkan/mesto/issues"
   },
-  "homepage": "https://github.com/KirillTsurkan/mesto#readme"
+  "homepage": "https://github.com/KirillTsurkan/mesto#readme",
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2"
+  },
+  "dependencies": {
+    "core-js": "^3.20.2"
+  }
 }
